# VidInjector9000

./: .gitignore  .gitmodules  CMakeLists.txt  README new.md  README.md  TIDthing.cpp  deploy.bat  deploy.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-multi-platform.yml  cmake.yml  main.yml  manual.yml
VidInjector9000/: VidInjector9000.bat  VidInjector9001.cpp  Vidinector9000.bat  build.bat
VidInjector9000/Vidinector9000Resources/tools/imagemagick/: ChangeLog  configure.xml  delegates.xml
VidInjector9000/Vidinjector9000Resources/files/: banner.bcwav  banner.cbmd
VidInjector9000/Vidinjector9000Resources/files/templates/MultiVideo/romfs/: icon.icn
VidInjector9000/Vidinjector9000Resources/files/templates/MultiVideo/romfs/effect/: BgEffect.arc.l
VidInjector9000/Vidinjector9000Resources/files/templates/MultiVideo/romfs/layout/: D_Bg.arc.l  D_BgFlare.arc.l  D_Cautions.arc.l  D_Cautions_EU.arc.l  D_Dialog.arc.l  D_InfoScrollAnm.arc.l  D_InformationBtn.arc.l  D_InformationBtn_Cursor.arc.l  D_InformationText.arc.l  D_MenuBtn.arc.l  D_MenuBtn_Cursor.arc.l  D_MoviePlay.arc.l  D_Navidial.arc.l  D_TitleBtn.arc.l  D_TitleBtn_Cursor.arc.l  FadeMask.arc.l  HomeNixSign.arc.l  ScrollBar.arc.l  U_Banner.arc.l  U_Bg.arc.l  (+5 more)
VidInjector9000/Vidinjector9000Resources/tools/imagemagick/: NOTICE.txt
VidInjector9000/src/: VidInjector9001.cpp  VidInjector9001.h  VidInjector9001.hpp  build.bat  build.py
VidInjector9001/Vidinjector9000Resources/files/: template.rsf
VidInjector9001/src/: CMakeLists.txt  VidInjector9001.cpp  build.bat  build.py  stb_image_resize.h  zip_file.hpp
VidInjector9002/: CMakeLists.txt  README.md
VidInjector9002-CLI/: CMakeLists.txt  README.md  build.bat  build.py  build.sh  build_deps.py  cmake-build.bat  cmake-build.sh  cmake-generate.bat  cmake-generate.sh
VidInjector9002-CLI/assets/files/: base.cia
VidInjector9002-CLI/cmake/: FileEmbed.cmake
VidInjector9002-CLI/include/: CTR_stuff.hpp  archive.hpp  arrays.hpp  banner.hpp  clim.hpp  darc_stuff.hpp  formatting.hpp  fs.hpp  image.hpp  lz.hpp  stbiStuff.hpp  strings.hpp  vi9p.hpp
VidInjector9002-CLI/sources/: CTR_stuff.cpp  archive.cpp  banner.cpp  clim.cpp  darc_stuff.cpp  formatting.cpp  fs.cpp  image.cpp  lz.cpp  stbiStuff.cpp  strings.cpp  vi9p.cpp
VidInjector9002-CLI/src/: CTR_stuff.cpp  CTR_stuff.hpp  archive.cpp  archive.hpp  arrays.cpp  arrays.hpp  banner.cpp  banner.hpp  fileReading.cpp  fileReading.hpp  files.hpp  formatting.cpp  formatting.hpp  fs.cpp  fs.hpp  image.cpp  image.hpp  main.cpp  microtar.cpp  microtar.hpp  stb_image.h  stb_image_resize2.h  stb_image_write.h  stbiStuff.hpp  strings.cpp  strings.hpp  vi9p.cpp  vi9p.hpp  zip_file.hpp
VidInjector9002-CLI/test/: add-rows.sh  build-cia-tar.sh  build-cia.sh  custom_Title_rogo.bclim  extract-cia.sh  get-banner-preview.sh  get-icon-preview.sh  new.sh  placeholder.moflex  print-parameters.sh  set-Ptitle.sh  set-mode.sh  set-moflex.sh  set-names.sh  set-rows-Ptitle.sh  set-rows-menu-banner.sh  set-rows-moflex.sh  set-smdh.sh  set-split.sh  set-top-image.sh
VidInjector9002.5/: CMakeLists.txt  README.md  VidInjector9002.5.exe - Shortcut.lnk  build.sh  fileReading.cpp  formatting.hpp  install-wxwidgets.sh  language.cpp  main.cpp  settings.cpp  strings.hpp  todo.txt  vi9p.hpp  widgets.cpp  widgets.hpp
VidInjector9002.5/Resources/: VidInjector9002_5.icns
VidInjector9002.5/VidInjector9000Resources/language/English/: Language.txt
VidInjector9002.5/VidInjector9000Resources/language/Simplified Chinese/: Language.txt
VidInjector9002.5/VidInjector9000Resources/language/Vietnamese/: Language.txt
VidInjector9002.5/VidInjector9000Resources/language/简体中文/: Language.txt
VidInjector9002.5/assets/files/: U_Title.bclyt
VidInjector9002.5/cmake/: makeInLang.cmake
VidInjector9002.5/development helpers/: loadLanguage.cpp  strings_to_txt_string_whatever.cpp
VidInjector9002.5/include/: appInitializer.hpp  events.hpp  formatting.hpp  language.hpp  lz.hpp  programStrings.hpp  settings.hpp  stbiStuff.hpp  vi9p.hpp  widgets.hpp
VidInjector9002.5/language-strings/: CMakeLists.txt
VidInjector9002.5/language-strings/include/: strings.hpp
VidInjector9002.5/language-strings/sources/: strings.cpp
VidInjector9002.5/sources/: CTR_stuff.cpp  archive.cpp  clim.cpp  events.cpp  fileReading.cpp  formatting.cpp  fs.cpp  image.cpp  language.cpp  main.cpp  programStrings.cpp  settings.cpp  stbiStuff.cpp  vi9p.cpp  widgets.cpp
VidInjector9002.5/src/: appInitializer.hpp  events.cpp  events.hpp  fileReading.hpp  formatting.cpp  formatting.hpp  language.cpp  language.hpp  main.cpp  settings.cpp  settings.hpp  strings.cpp  strings.hpp  vi9p.cpp  vi9p.hpp  widgets.cpp  widgets.hpp
VidInjector9002/Vidinjector9000Resources/language/British/: Language.txt
VidInjector9002/Vidinjector9000Resources/language/English/: InLang.cpp  InLang.hpp  Language.txt  loadLanguage.cpp  xtd stuff.cpp
VidInjector9002/Vidinjector9000Resources/language/French/: Language.txt
VidInjector9002/Vidinjector9000Resources/language/Japanese/: Language.txt
VidInjector9002/Vidinjector9000Resources/language/Spanish/: Language.txt
VidInjector9002/helper stuff/: strings_to_txt_string_whatever.cpp
VidInjector9002/properties/: startup.cpp  target_properties.cmake
VidInjector9002/src/: CTR_stuff.cpp  CTR_stuff.hpp  arrays.h  files.hpp  form1.cpp  form1.h  formatting.cpp  formatting.hpp  images.cpp  images.h  images.hpp  microtar.cpp  microtar.hpp  smdh.c  stb_image.h  strings.cpp  strings.hpp  utf.c  zip_file.hpp
VidInjector9002/src/nnc/: cia.c  crypto.c  exefs.c  exheader.c  exheader_syscall_tab.inc  internal.c  internal.h  ivfc.c  ncch.c  romfs.c  sigcert.c  smdh.c  stream.c  swizzle.c  ticket.c  tmd.c  u128.c  utf.c  utf.h
VidInjector9002/src/nnc/nnc/: base.h  cia.h  crypto.h  exefs.h  exheader.h  ivfc.h  ncch.h  romfs.h  sigcert.h  smdh.h  stream.h  swizzle.h  ticket.h  tmd.h  u128.h  utf.h
cmake/: helpers.cmake
include/: fs.hpp  strings.hpp  vi9p.hpp
sources/: clim.cpp  fs.cpp  lz.cpp  microtar.cpp  stbiStuff.cpp  vi9p.cpp
test/: CMakeLists.txt
(+43 files in other folders)
