cmake_minimum_required(VERSION 3.20)
project(VidInjector9002.5)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(PRODUCT_VER "3,5,2,0")

# https://stackoverflow.com/a/32259072
if (UNIX AND NOT APPLE)
	set(LINUX TRUE)
endif()

# if(NOT LINUX) should work, too, if you need that
if (LINUX) 
	link_libraries(curl)
endif()

if (NOT MSVC)
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
endif()

# https://docs.wxwidgets.org/3.3/overview_string.html I'm not sure if this fixed anything or not but it seems good to keep
set(wxUSE_UNICODE_UTF8 TRUE)

set(CMAKE_CXX_FLAGS_DEBUG "-g")
#set(CMAKE_CXX_FLAGS_RELEASE "-O2")

file(GLOB MY_SRC
	"${CMAKE_CURRENT_SOURCE_DIR}/sources/*.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/*.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp"
)

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")

# https://github.com/gammasoft71/Examples_wxWidgets/tree/master/wxCore/Applications/ApplicationIcon
# Resources
if (MSVC)
	set(MY_SRC ${MY_SRC} ${CMAKE_CURRENT_BINARY_DIR}/resources/${PROJECT_NAME}.rc)
	set(RESOURCES Resources/VidInjector9002_5.ico)
	get_filename_component(ABSOLUTE_PATH_FILE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/Resources/VidInjector9002_5.ico" REALPATH BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
	string(REPLACE "/" "\\\\" ABSOLUTE_PATH_FILE_ICON ${ABSOLUTE_PATH_FILE_ICON})
	file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/resources/${PROJECT_NAME}.rc
		"#pragma region CMake generated code\n"
		"// This code was generated by CMake script.\n"
		"//\n"
		"// Changes to this file may cause incorrect behavior and will be lost if the code is regenerated.\n"
		"\n"
		"#include <Windows.h>\n"
		"\n"
		"LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL\n"
		"#pragma code_page(65001)\n"
		"\n"
		"IDI_APPLICATION ICON DISCARDABLE \"${ABSOLUTE_PATH_FILE_ICON}\"\n\n"
		"VS_VERSION_INFO VERSIONINFO\n"
		" FILEVERSION 3,5,1,0\n"
		" PRODUCTVERSION 3,5,1\n"
		" FILEFLAGSMASK 0x0L\n"
		"#if !defined(NDEBUG)\n"
		" FILEFLAGS VS_FF_DEBUG\n"
		"#endif\n"
		" FILEOS VOS_NT\n"
		" FILETYPE VFT_APP\n"
		" FILESUBTYPE VFT2_UNKNOWN\n"
		"BEGIN\n"
		"  BLOCK \"StringFileInfo\"\n"
		"  BEGIN\n"
		"    BLOCK \"000004b0\"\n"
		"    BEGIN\n"
		"      VALUE \"CompanyName\", \"FoofooTheGuy\"\n"
		"      VALUE \"FileDescription\", \"A GUI wrapper for VidInjector9002-CLI\"\n"
		"      VALUE \"FileVersion\", \"${PRODUCT_VER}\"\n"
		"      VALUE \"InternalName\", \"${PROJECT_NAME}\"\n"
		"      VALUE \"LegalCopyright\", \"\"\n"
		"      VALUE \"LegalTrademarks1\", \"\"\n"
		"      VALUE \"LegalTrademarks2\", \"\"\n"
		"      VALUE \"OriginalFilename\", \"${PROJECT_NAME}.exe\"\n"
		"      VALUE \"ProductName\", \"${PROJECT_NAME}\"\n"
		"      VALUE \"ProductVersion\", \"${PRODUCT_VER}\"\n"
		"    END\n"
		"  END\n"
		"  BLOCK \"VarFileInfo\"\n"
		"  BEGIN\n"
		"    VALUE \"Translation\", 0x0, 1200\n"
		"  END\n"
		"END\n"
		"#pragma endregion\n"
	)
	#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/VidInjector9002_5.ico ${CMAKE_CURRENT_BINARY_DIR}/Resources/VidInjector9002_5.ico COPYONLY)
	#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/VidInjector9002_5.ico ${CMAKE_CURRENT_BINARY_DIR}/Debug/Resources/VidInjector9002_5.ico COPYONLY)
	#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/VidInjector9002_5.ico ${CMAKE_CURRENT_BINARY_DIR}/Release/Resources/VidInjector9002_5.ico COPYONLY)
	#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/VidInjector9002_5.png ${CMAKE_CURRENT_BINARY_DIR}/Resources/VidInjector9002_5.png COPYONLY)
	#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/VidInjector9002_5.png ${CMAKE_CURRENT_BINARY_DIR}/Debug/Resources/VidInjector9002_5.png COPYONLY)
	#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/VidInjector9002_5.png ${CMAKE_CURRENT_BINARY_DIR}/Release/Resources/VidInjector9002_5.png COPYONLY)
elseif (APPLE)
	set(RESOURCES Resources/VidInjector9002_5.icns Resources/VidInjector9002_5.png)
	set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/Resources/VidInjector9002_5.icns PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
	set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/Resources/VidInjector9002_5.png PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
	set(MACOSX_BUNDLE_ICON_FILE "VidInjector9002_5.icns")
elseif (LINUX)
	set(RESOURCES Resources/VidInjector9002_5.png)
	file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/resources/${PROJECT_NAME}.desktop
		"[Desktop Entry]\n"
		"Name=${PROJECT_NAME}\n"
		"Type=Application\n"
		"Categories=Utility\n"
		"Exec=${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}\n"
		"Icon=VidInjector9002_5\n"
		"NoDisplay=true\n"
		"Terminal=false\n"
	)
	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/VidInjector9002_5.png $ENV{HOME}/.local/share/icons/hicolor/512x512/apps/VidInjector9002_5.png COPYONLY)
	file(COPY ${CMAKE_CURRENT_BINARY_DIR}/resources/${PROJECT_NAME}.desktop DESTINATION "$ENV{HOME}/.local/share/applications" FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)
	configure_file(${CMAKE_CURRENT_BINARY_DIR}/resources/${PROJECT_NAME}.desktop $ENV{HOME}/.local/share/applications/${PROJECT_NAME}.desktop COPYONLY)
endif()

# https://docs.wxwidgets.org/3.3.1/overview_cmake.html
set(wxBUILD_SHARED OFF)
add_subdirectory(wxWidgets-3.3.1)

include(cmake/makeInLang.cmake)

add_executable(${PROJECT_NAME} WIN32 MACOSX_BUNDLE ${MY_SRC} ${RESOURCES})

inLangSetup()
MakeInLang()

if (LINUX)
	set_target_properties(${PROJECT_NAME} PROPERTIES
		OUTPUT_NAME ${PROJECT_NAME}
		PREFIX ""
		SUFFIX ".out"
	)
endif()

target_link_libraries(${PROJECT_NAME} InLang wx::net wx::core wx::base)
#if (UNIX)
#	find_package(X11)
#	if(X11_FOUND)
#		target_link_libraries(${PROJECT_NAME} X11)
#	endif()
#endif()

if (MSVC)
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:wmainCRTStartup")
endif()

set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Application")
